# OOP_LABS

./: .gitignore  README.md
.devcontainer/: devcontainer.json
labs/lab1/: CMakeLists.txt  README.md  main.cpp
labs/lab1/include/: eliminate_bits.h
labs/lab1/src/: eliminate_bits.cpp
labs/lab1/tests/: tests.cpp
labs/lab2/: README.md
labs/lab2/include/: eleven.h  exceptions.h  vector.h
labs/lab2/src/: eleven.cpp  vector.cpp
labs/lab3/: CMakeLists.txt  README.md  main.cpp
labs/lab3/include/: figure.h  point.h  rectangle.h  rhombus.h  trapezoid.h  vector.h
labs/lab3/src/: point.cpp  rectangle.cpp  rhombus.cpp  trapezoid.cpp  vector.cpp
labs/lab3/tests/: tests.cpp
labs/lab4/: README.md  main.cpp
labs/lab4/include/: exceptions.hpp  figure.hpp  point.hpp  point.ipp  rectangle.hpp  rectangle.ipp  square.hpp  square.ipp  triangle.hpp  triangle.ipp  vector.hpp  vector.ipp
labs/lab4/tests/: tests.cpp
labs/lab5/: CMakeLists.txt  main.cpp
labs/lab5/include/: exceptions.hpp  memory_resource.hpp  vector.hpp  vector.ipp
labs/lab5/src/: memory_resource.cpp
labs/lab5/tests/: tests.cpp
labs/lab6/: CMakeLists.txt  main.cpp
labs/lab6/include/: battle_visitor.hpp  console_observer.hpp  dungeon_editor.hpp  file_observer.hpp  knight.hpp  npc.hpp  npc_factory.hpp  npc_handle.hpp  observer.hpp  pegasus.hpp  squirrel.hpp
labs/lab6/src/: battle_visitor.cpp  console_observer.cpp  dungeon_editor.cpp  file_observer.cpp  knight.cpp  npc.cpp  npc_factory.cpp  observer.cpp  pegasus.cpp  squirrel.cpp
labs/labb2/: CMakeLists.txt  README.md  main.cpp
labs/labb2/include/: eleven.h  exceptions.h  vector.h
labs/labb2/src/: eleven.cpp  vector.cpp
labs/labb2/tests/: tests.cpp
labs/llab7/: CMakeLists.txt  main.cpp
labs/llab7/include/: battle_visitor.hpp  npc.hpp  simulation.hpp
labs/llab7/src/: battle_visitor.cpp  npc.cpp  npc_handle.cpp  simulation.cpp
labs/llab7/tests/: tests.cpp
